Auflösung Kopf geändert

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-2-25" >
-									<img src="images/Ich draussen.jpg" alt="" />
+									<img src="images/Ich_draussen.jpg" alt="" />
 								</div>
 							</section>
 
