Speichern wenn änderung

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										</ul>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/OPENHOUSE-115.jpg" alt="" />
+									<img src="images/VR-Parcours-Bild.jpg" alt="" />
 								</div>
 								<ul class="actions stacked">
 									<p></p>
