Test mit mp4 wurm

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										</ul>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/VR-Parcours-Bild.jpg" alt="" />
+									<img src="images/v" alt="" />
 								</div>
 								<ul class="actions stacked">
 									<p></p>
@@ -100,7 +100,11 @@
 										<a href="images/GIFs/Taube_Web.gif" class="image filtered span-1-5" data-position="center"><img src="images/GIFs/Taube_Web.gif" alt="" /></a>
 										<a href="images/GIFs/Corona_Web.gif" class="image filtered span-1-5" data-position="bottom"><img src="images/GIFs/Corona_Web.gif" alt="" /></a>
 									</div>
-									<a href="images/GIFs/Wurm_Web.gif" class="image filtered span-2-5" data-position="top"><img src="images/GIFs/Wurm_Web.gif" alt="" /></a>
+									<a href="images/GIFs/Wurm_Web.gif" class="image filtered span-2-5" data-position="top">
+										<video autoplay loop muted playsinline>
+											<source src="Videos/Wurm_Baelle.mp4" type="video/mp4">
+										</video>
+									</a>
 
 									<div class="group span-4-5">
 										<a href="images/GIFs/Fische_Web.gif" class="image filtered span-3" data-position="center"><img src="images/GIFs/Fische_Web.gif" alt="" /></a>
