--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 								<div class="gallery">
 									<div class="group span-3">
 										<a href="images/GIFs/WurmBild_Web.gif" class="image filtered span-3" data-position="center"><img src="images/GIFs/WurmBild_Web.gif" alt="" /></a>
-										<a href="images/GIFs/Taube_Web.gif" class="image filtered span-1-5" data-position="center"><img src="images/GIFs/Taube_Web.gif" alt="" /></a>
+										<a href="images/GIFs/Taube_Web.gif" class="image filtered span-1-5" data-position="bottom">
+											<video autoplay loop muted playsinline>
+											<source src="Videos/Taube.mp4" type="video/mp4">
+										</video></a>
 										<a href="images/GIFs/Corona_Web.gif" class="image filtered span-1-5" data-position="bottom"><img src="images/GIFs/Corona_Web.gif" alt="" /></a>
 									</div>
 									<a href="images/GIFs/Wurm_Web.gif" class="image filtered span-2-5" data-position="top">
@@ -107,10 +110,22 @@
 									</a>
 
 									<div class="group span-4-5">
-										<a href="images/GIFs/Fische_Web.gif" class="image filtered span-3" data-position="center"><img src="images/GIFs/Fische_Web.gif" alt="" /></a>
+										<a href="images/GIFs/Fische_Web.gif" class="image filtered span-3" data-position="center">
+											<video autoplay loop muted playsinline>
+												<source src="Videos/Fische.mp4" type="video/mp4">
+											</video>
+										</a>
 										<a href="images/GIFs/GoldArk_Web.gif" class="image filtered span-1-5" data-position="center"><img src="images/GIFs/GoldArk_Web.gif" alt="" /></a>
-										<a href="images/GIFs/Astronaut_Web.gif" class="image filtered span-1-5" data-position="bottom"><img src="images/GIFs/Astronaut_Web.gif" alt="" /></a>
-										<a href="images/GIFs/Folienkopf_Web.gif" class="image filtered span-3" data-position="center"><img src="images/GIFs/Folienkopf_Web.gif" alt="" /></a>
+										<a href="images/GIFs/Astronaut_Web.gif" class="image filtered span-1-5" data-position="bottom">
+											<video autoplay loop muted playsinline>
+												<source src="Videos/Astronaut.mp4" type="video/mp4">
+											</video>
+										</a>
+										<a href="images/GIFs/Folienkopf_Web.gif" class="image filtered span-3" data-position="center">
+											<video autoplay loop muted playsinline>
+												<source src="Videos/FolienKopf.mp4" type="video/mp4">
+											</video>
+										</a>
 								
 									</div>
 									
