--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 										</ul>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/v" alt="" />
+									<img src="images/VR-Parcours-Bild.jpg" alt="" />
 								</div>
-								<ul class="actions stacked">
+								<ul class="actions stacked span-3">
 									<p></p>
 									<iframe src="https://www.youtube.com/embed/6oW2ObnN9w4" width="560" height="315" frameborder="0"
 									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -96,14 +96,14 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/GIFs/WurmBild_Web.gif" class="image filtered span-3" data-position="center"><img src="images/GIFs/WurmBild_Web.gif" alt="" /></a>
+										<a href="images/GIFs/Wurm_Bild.jpg" class="image filtered span-3" data-position="center"><img src="images/GIFs/Wurm_Bild.jpg" alt="" /></a>
 										<a href="images/GIFs/Taube_Web.gif" class="image filtered span-1-5" data-position="bottom">
 											<video autoplay loop muted playsinline>
 											<source src="Videos/Taube.mp4" type="video/mp4">
 										</video></a>
-										<a href="images/GIFs/Corona_Web.gif" class="image filtered span-1-5" data-position="bottom"><img src="images/GIFs/Corona_Web.gif" alt="" /></a>
+										<a href="images/GIFs/crystalbacteria3.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/GIFs/crystalbacteria3.jpg" alt="" /></a>
 									</div>
-									<a href="images/GIFs/Wurm_Web.gif" class="image filtered span-2-5" data-position="top">
+									<a href="images/GIFs/Wurm_Web.gif" class="image filtered span-2" data-position="top">
 										<video autoplay loop muted playsinline>
 											<source src="Videos/Wurm_Baelle.mp4" type="video/mp4">
 										</video>
@@ -115,7 +115,7 @@
 												<source src="Videos/Fische.mp4" type="video/mp4">
 											</video>
 										</a>
-										<a href="images/GIFs/GoldArk_Web.gif" class="image filtered span-1-5" data-position="center"><img src="images/GIFs/GoldArk_Web.gif" alt="" /></a>
+										<a href="images/GIFs/GoldArk.jpg" class="image filtered span-1-5" data-position="center"><img src="images/GIFs/GoldArk.jpg" alt="" /></a>
 										<a href="images/GIFs/Astronaut_Web.gif" class="image filtered span-1-5" data-position="bottom">
 											<video autoplay loop muted playsinline>
 												<source src="Videos/Astronaut.mp4" type="video/mp4">
@@ -129,7 +129,7 @@
 								
 									</div>
 									
-									<a href="images/GIFs/Hopper_Web.gif" class="image filtered span-2-5" data-position="right"><img src="images/GIFs/Hopper_Web.gif" alt="" /></a>
+									<a href="images/GIFs/Hopper.jpg" class="image filtered span-2-5" data-position="right"><img src="images/GIFs/Hopper.jpg" alt="" /></a>
 								</div>
 							</section>
 							<section class="panel">
