--- a/index.html
+++ b/index.html
@@ -97,31 +97,31 @@
 								<div class="gallery">
 									<div class="group span-3">
 										<a href="images/GIFs/Wurm_Bild.jpg" class="image filtered span-3" data-position="center"><img src="images/GIFs/Wurm_Bild.jpg" alt="" /></a>
-										<a href="images/GIFs/Taube_Web.gif" class="image filtered span-1-5" data-position="bottom">
+										<a href="Videos/Taube.mp4" class="image filtered span-1-5" data-position="bottom">
 											<video autoplay loop muted playsinline>
 											<source src="Videos/Taube.mp4" type="video/mp4">
 										</video></a>
 										<a href="images/GIFs/crystalbacteria3.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/GIFs/crystalbacteria3.jpg" alt="" /></a>
 									</div>
-									<a href="images/GIFs/Wurm_Web.gif" class="image filtered span-2" data-position="top">
+									<a href="Videos/Wurm_Baelle.mp4" class="image filtered span-2" data-position="top">
 										<video autoplay loop muted playsinline>
 											<source src="Videos/Wurm_Baelle.mp4" type="video/mp4">
 										</video>
 									</a>
 
 									<div class="group span-4-5">
-										<a href="images/GIFs/Fische_Web.gif" class="image filtered span-3" data-position="center">
+										<a href="Videos/Fische.mp4" class="image filtered span-3" data-position="center">
 											<video autoplay loop muted playsinline>
 												<source src="Videos/Fische.mp4" type="video/mp4">
 											</video>
 										</a>
 										<a href="images/GIFs/GoldArk.jpg" class="image filtered span-1-5" data-position="center"><img src="images/GIFs/GoldArk.jpg" alt="" /></a>
-										<a href="images/GIFs/Astronaut_Web.gif" class="image filtered span-1-5" data-position="bottom">
+										<a href="Videos/Astronaut.mp4" class="image filtered span-1-5" data-position="bottom">
 											<video autoplay loop muted playsinline>
 												<source src="Videos/Astronaut.mp4" type="video/mp4">
 											</video>
 										</a>
-										<a href="images/GIFs/Folienkopf_Web.gif" class="image filtered span-3" data-position="center">
+										<a href="Videos/FolienKopf.mp4" class="image filtered span-3" data-position="center">
 											<video autoplay loop muted playsinline>
 												<source src="Videos/FolienKopf.mp4" type="video/mp4">
 											</video>
