--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="wrapper">
 
         <!-- Panel (Banner) -->
-        <section class="panel banner right">
+        <section class="panel banner right"id="first">
             <div class="content color0 span-3-75">
                 <h1 class="major">Ich bin<br/>
                     Christoph Schneider</h1>
@@ -43,7 +43,7 @@
         </section>
 
         <!-- Panel (Spotlight) -->
-        <section class="panel banner right" id="first">
+        <section class="panel banner right">
             <div class="content color4 span-3-75">
                 <h2 class="major">Mein Werdegang</h2>
                 <p>Nach meiner Berufslehre als Chemielaborant EFZ an der Universität Bern arbeitete ich einige Jahre in
@@ -88,7 +88,8 @@
                 <img alt="" src="images/VR-Parcours-Bild.jpg"/>
             </div>
             <ul class="actions stacked span-3">
-                <p></p>
+				<p></p>
+				
                 <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="315"
                         src="https://www.youtube.com/embed/6oW2ObnN9w4"
                         width="560"></iframe>
@@ -109,41 +110,42 @@
                 <ul class="actions">
                     <li><a class="button primary color1 square icon solid fa-angle-right" href="#fourth">Next</a></li>
                 </ul>
-            </div>
+			</div>
+		
             <div class="gallery">
                 <div class="group span-3">
                     <a class="image filtered span-3" data-position="center" href="images/GIFs/Wurm_Bild.jpg"><img
                             alt="" src="images/GIFs/Wurm_Bild.jpg"/></a>
-                    <a class="image filtered span-1-5" data-position="bottom" href="Videos/Taube.mp4">
+                    <a class="image filtered span-1-5" data-position="bottom" href="Videos/Pigeon_Test.webm">
                         <video autoplay loop muted playsinline>
-                            <source src="Videos/Taube.mp4" type="video/mp4">
+                            <source src="Videos/Pigeon_Test.webm" type="video/webm">
                         </video>
                     </a>
                     <a class="image filtered span-1-5" data-position="bottom"
                        href="images/GIFs/crystalbacteria3.jpg"><img alt="" src="images/GIFs/crystalbacteria3.jpg"/></a>
                 </div>
-                <a class="image filtered span-2" data-position="top" href="Videos/Wurm_Baelle.mp4">
+                <a class="image filtered span-2" data-position="top" href="Videos/Wurm_Baelle.webm">
                     <video autoplay loop muted playsinline>
-                        <source src="Videos/Wurm_Baelle.mp4" type="video/mp4">
+                        <source src="Videos/Wurm_Baelle.webm" type="video/webm">
                     </video>
                 </a>
 
                 <div class="group span-4-5">
-                    <a class="image filtered span-3" data-position="center" href="Videos/Fische.mp4">
+                    <a class="image filtered span-3" data-position="center" href="Videos/Fisch.webm">
                         <video autoplay loop muted playsinline>
-                            <source src="Videos/Fische.mp4" type="video/mp4">
+                            <source src="Videos/Fisch.webm" type="video/webm">
                         </video>
                     </a>
                     <a class="image filtered span-1-5" data-position="center" href="images/GIFs/GoldArk.jpg"><img
                             alt="" src="images/GIFs/GoldArk.jpg"/></a>
-                    <a class="image filtered span-1-5" data-position="bottom" href="Videos/Astronaut.mp4">
+                    <a class="image filtered span-1-5" data-position="bottom" href="Videos/Astronaut.webm">
                         <video autoplay loop muted playsinline>
-                            <source src="Videos/Astronaut.mp4" type="video/mp4">
+                            <source src="Videos/Astronaut.webm" type="video/webm">
                         </video>
                     </a>
-                    <a class="image filtered span-3" data-position="center" href="Videos/FolienKopf.mp4">
+                    <a class="image filtered span-3" data-position="center" href="Videos/Foliengesicht.webm">
                         <video autoplay loop muted playsinline>
-                            <source src="Videos/FolienKopf.mp4" type="video/mp4">
+                            <source src="Videos/Foliengesicht.webm" type="video/webm">
                         </video>
                     </a>
 
@@ -205,19 +207,14 @@
             <div class="intro color2 span-4">
 
                 <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2018 HyperWerk an der
-                    FHNW in Basel<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2018 HyperWerk an der FHNW in Basel<br/>
                     2017 - 2018 BMS Fachrichtung Gestaltung und Kunst, GiBB<br/>
                     2011 - 2017 Laborant, Universität Bern, Forensische Molekularbiologie<br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2010 Temporärarbeiter
-                    auf Abbruch bei Manpower<br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2010 Rekrutenschule
-                    als Infanterist<br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2009 Laborassistent,
-                    60% Pensum, QM, Team Labor Kraft Foods<br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2009 Praktikumsstelle
-                    an der Universität Bern DCB<br/>
-                    2006 – 2009 Berufslehre als Chemielaborant an der Universität Bern DCB
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2010 Temporärarbeiter auf Abbruch bei Manpower<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2010 Rekrutenschule als Infanterist<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2009 Laborassistent, 60% Pensum, QM, Team Labor Kraft Foods<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2009 Praktikumsstelle an der Universität Bern DCB<br/>
+                    2006 - 2009 Berufslehre als Chemielaborant an der Universität Bern DCB
                 </p>
             </div>
         </section>
