Pre-Rework Renderings

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <div id="wrapper">
 
         <!-- Panel (Banner) -->
-        <section class="panel banner right"id="first">
+        <section class="panel banner right"id="start">
             <div class="content color0 span-3-75">
                 <h1 class="major">Ich bin<br/>
                     Christoph Schneider</h1>
                 <p>Ich bin gelernter Chemielaborant und studiere Postindustrial Design am Institut <a
-                        href="https://www.fhnw.ch/en/about-fhnw/schools/academy-of-art-and-design/institutes/institute-hyperwerk">HyperWerk</a>
+                        href="https://www.fhnw.ch/en/about-fhnw/schools/academy-of-art-and-design/institutes/institute-hyperwerk" target="_blank">HyperWerk</a>
                     der FHNW. Durch meine Ausbildung bin ich mir genaues Arbeiten unter Zeitdruck gewohnt. Für mich ist
                     es wichtig auch bei grossen Herausvorderungen nicht die Übersicht zu verlieren und stets ruhig und
                     struckturiert zu arbeiten.</p>
 
                 <ul class="actions">
-                    <li><a class="button primary color1 square icon solid fa-angle-right" href="#first">Next</a></li>
+					<li><a class="button primary color1 square icon solid fa-angle-right" href="#fifth">CV</a></li>
                 </ul>
             </div>
             <div class="image filtered span-2-25">
@@ -43,7 +43,7 @@
         </section>
 
         <!-- Panel (Spotlight) -->
-        <section class="panel banner right">
+        <section class="panel banner right" d="first">
             <div class="content color4 span-3-75">
                 <h2 class="major">Mein Werdegang</h2>
                 <p>Nach meiner Berufslehre als Chemielaborant EFZ an der Universität Bern arbeitete ich einige Jahre in
@@ -99,16 +99,49 @@
                         width="560"></iframe>
             </ul>
         </section>
+<!-- Panel -->
+<section class="panel color4-alt" id="third">
+	<div class="intro color10">
+		<h2 class="major">Animation</h2>
+		<p>Unter der Animations-Werkstatt<br/>[ h a l f p e e l e d ] entstehen zwischen drei und fünf Tagen
+			Animationen. Dabei geht es ums Improvisieren und um von einander zu lernen. Wir streben nicht nach
+			Perfektion, sondern suchen die schnelle Zusammenarbeit und das Resultat.</p>
+		<ul class="actions">
+			<li><a class="button primary color1 square icon solid fa-angle-right" href="#fourth">Next</a></li>
+		</ul>
+	</div>
+	<div class="action stacked span-3">
+		<p></p>
+		<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="280"
+				src="https://www.youtube.com/embed/BIy6D_f-dYU"
+				width="560"></iframe>
+
+		<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="280"
+				src="https://www.youtube.com/embed/LIdxHc9ojG4"
+				width="560"></iframe>
+	</div>
+	<div class="action stacked span-3">
+		<p></p>
+		<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="280"
+				src="https://www.youtube.com/embed/pcKdEroPqAA"
+				width="560"></iframe>
+
+		<iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="280"
+				src="https://www.youtube.com/embed/k40K2Qd-rT8"
+				width="560"></iframe>
+	</div>
+
+</section>
 
 
         <!-- Panel -->
-        <section class="panel" id="third">
+        <section class="panel" id="fourth">
             <div class="intro color2">
                 <h2 class="major">Renderings<br/>
                     Blender</h2>
                 <p></p>
                 <ul class="actions">
-                    <li><a class="button primary color1 square icon solid fa-angle-right" href="#fourth">Next</a></li>
+                    <li><a class="button primary color1 square icon solid fa-angle-right" href="#fifth">Next</a></li>
                 </ul>
 			</div>
 		
@@ -116,7 +149,7 @@
                 <div class="group span-3">
                     <a class="image filtered span-3" data-position="center" href="images/GIFs/Wurm_Bild.jpg"><img
                             alt="" src="images/GIFs/Wurm_Bild.jpg"/></a>
-                    <a class="image filtered span-1-5" data-position="bottom" href="Videos/Pigeon_Test.webm">
+                    <a class="image filtered span-1-5" data-position="bottom">
                         <video autoplay loop muted playsinline>
                             <source src="Videos/Pigeon_Test.webm" type="video/webm">
                         </video>
@@ -124,7 +157,7 @@
                     <a class="image filtered span-1-5" data-position="bottom"
                        href="images/GIFs/crystalbacteria3.jpg"><img alt="" src="images/GIFs/crystalbacteria3.jpg"/></a>
                 </div>
-                <a class="image filtered span-2" data-position="top" href="Videos/Wurm_Baelle.webm">
+                <a class="image filtered span-2" data-position="center" href="Videos/Wurm_Baelle.webm">
                     <video autoplay loop muted playsinline>
                         <source src="Videos/Wurm_Baelle.webm" type="video/webm">
                     </video>
@@ -160,48 +193,14 @@
 
             </div>
         </section>
-        <!-- Panel -->
-        <section class="panel color4-alt" id="fourth">
-            <div class="intro color4">
-                <h2 class="major">Animation</h2>
-                <p>Unter der Animations-Werkstatt<br/>[ h a l f p e e l e d ] entstehen zwischen drei und fünf Tagen
-                    Animationen. Dabei geht es ums Improvisieren und um von einander zu lernen. Wir streben nicht nach
-                    Perfektion, sondern suchen die schnelle Zusammenarbeit und das Resultat.</p>
-                <ul class="actions">
-                    <li><a class="button primary color1 square icon solid fa-angle-right" href="#fifth">Next</a></li>
-                </ul>
-            </div>
-            <div class="action stacked span-3">
-
-                <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="300"
-                        src="https://www.youtube.com/embed/BIy6D_f-dYU"
-                        width="560"></iframe>
-
-                <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="300"
-                        src="https://www.youtube.com/embed/LIdxHc9ojG4"
-                        width="560"></iframe>
-            </div>
-            <div class="action stacked span-3">
-
-                <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="300"
-                        src="https://www.youtube.com/embed/pcKdEroPqAA"
-                        width="560"></iframe>
-
-                <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="300"
-                        src="https://www.youtube.com/embed/k40K2Qd-rT8"
-                        width="560"></iframe>
-            </div>
-
-        </section>
-
-
+        
         <!-- Panel -->
         <section class="panel color2-alt" id="fifth">
             <div class="intro color2">
                 <h2 class="major">Lebenslauf</h2>
                 <p>Licht der Welt: 29. März 1991</p>
                 <ul class="actions">
-                    <li><a class="button primary color1 square icon solid fa-angle-right" href="#first">Start</a></li>
+                    <li><a class="button primary color1 square icon solid fa-angle-right" href="#start">Start</a></li>
                 </ul>
             </div>
             <div class="intro color2 span-4">
