VDK grössere Bilder

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- Panel -->
         <section class="panel banner right">
-            <div class="content color0 span-1">
+            <div class="content color2-alt span-2">
                 <h1 class="major">Work</h1>
             </div>
 
@@ -199,10 +199,10 @@
         <div class="gallery">
             
             <div class="group span-1-5">
-                <a href="VDK/Box2.jpg" class="image filtered tinted span-1-5" data-position="center">
+                <a href="VDK/Box2_gross.jpg" class="image filtered tinted span-1-5" data-position="center">
                     <img src="VDK/Box2.jpg" alt="" />
                 </a>
-                <a href="VDK/Box1.jpg" class="image filtered tinted span-1-5" data-position="center">
+                <a href="VDK/Box1_gross.jpg" class="image filtered tinted span-1-5" data-position="center">
                     <img src="VDK/Box1.jpg" alt="" />
                 </a>
             </div>
@@ -222,27 +222,22 @@
                     <img src="VDK/Box_close4.jpg" alt="" />
                 </a>
             </div>
-            <a class="image filtered span-6" data-position="center" href="VDK/Lampe1.jpg"><img
+            <a class="image filtered span-6" data-position="center"><img
                 alt="" src="VDK/Lampe1.jpg"/>
             </a>
                 <div class="group span-1-5">
-                    <a href="VDK/Software1.jpg" class="image filtered tinted span-1-5" data-position="center">
+                    <a href="VDK/Software1_gross.jpg" class="image filtered tinted span-1-5" data-position="center">
                         <img src="VDK/Software1.jpg" alt="" />
                     </a>
-                    <a href="VDK/Software2.jpg" class="image filtered tinted span-1-5" data-position="center">
+                    <a href="VDK/Software2_gross.jpg" class="image filtered tinted span-1-5" data-position="center">
                         <img src="VDK/Software2.jpg" alt="" />
                     </a>
                 </div>
-                <a class="image filtered span-1-5" data-position="center" href="VDK/Software3.jpg"><img
+                <a class="image filtered span-2" data-position="center" href="VDK/Software3_gross.jpg"><img
                     alt="" src="VDK/Software3.jpg"/>
                 </a>
         </div>
 
-        <section class="panel span-0-25">
-            <div class="intro color1 span-0-25">
-
-            </div>
-        </section>
 
         <!-- Panel (Spotlight) -->
         <section class="panel banner right" id="last">
