--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <li><a class="button primary color1 square icon solid fa-angle-right" href="#start">Start</a></li>
                 </ul>
 
-                <div class="copyright"> &copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>
+                <div class="copyright"> &copy; Untitled. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>
                 </div>
             </div>
 
