LinkedIn hinzugefügt responsive versucht aber gescheitert

--- a/index.html
+++ b/index.html
@@ -25,23 +25,28 @@
 
         <!-- Panel (Banner) -->
         <section class="panel banner right" id="start">
-            <div class="content color0 span-3-75">
-                <h1 class="major">I am<br/>
-                    Christoph Schneider</h1>
+            <div class="content color0 span-4">
+                <h2 class="major">I am<br/>
+                    Christoph Schneider</h2>
                 <p>I am a trained chemical laboratory assistant and study Postindustrial Design at the Institute <a
                     href="https://www.fhnw.ch/en/about-fhnw/schools/academy-of-art-and-design/institutes/institute-hyperwerk" target="_blank">HyperWerk</a> of the FHNW.
                      Due to my education I am used to work accurately even under time pressure. For me it is important not to lose the 
                      overview even with big challenges and to work calmly and structured. 
                 </p>
-
+               
                 <ul class="actions">
                     <li><a class="button primary color2 square icon solid fa-angle-right" href="#second">VR</a></li>
                     <li><a class="button primary color2 square icon solid fa-angle-right" href="#third">Animations</a></li>
                     <li><a class="button primary color1 square icon solid fa-angle-right" href="#fourth">Renderings</a></li>
                     <li><a class="button primary color1 square icon solid fa-angle-right" href="#fifth">VDK</a></li>
                 </ul>
-            </div>
-
+                <ul class="actions">
+                    <li><a class="button primary color2 square icon solid fa-angle-right" href="#last">My Way</a></li>
+                    <li><a class="button primary color2 square icon solid fa-chart-bar" href="https://www.linkedin.com/in/christoph-schneider-331474186/" 
+                            target="_blank">LinkedIn</a></li> 
+                </ul>
+            
+        </div>
             <div class="gallery filtered span-2-25">
                 <a class="image filtered span-2-25" data-position="center" href="images/Ich_draussen.jpg"><img
                     alt="" src="images/Ich_draussen.jpg"> </a>
