--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="intro color2">
                 <h2 class="major">Renderings<br/>
                     Blender</h2>
-                <p>A small selection of renderings.</p>
+                <p>A selection of my renderings.</p>
                 <ul class="actions">
                     <li><a class="button primary color1 square icon solid fa-angle-right" href="#fifth">Next</a></li>
                 </ul>
@@ -170,8 +170,8 @@
                     <a class="image filtered span-1-5" data-position="center" href="images/renderings/GoldArk_Gross.png"><img
                         alt="" src="images/renderings/GoldArk_Klein.jpg"/>
                     </a>
-                    <a  class="image filtered span-1-5" data-position="center" href="images/renderings/Meat_Gross.jpg"><img
-                        alt="" src="images/renderings/Meat_Klein.jpg"/>
+                    <a  class="image filtered span-1-5" data-position="center" href="images/renderings/Sofa_Gross.jpg"><img
+                        alt="" src="images/renderings/Sofa_Klein.jpg"/>
                     </a>
                 </div>
                     <a class="image filtered span-3" data-position="center">
