--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
             <div class="intro color2">
                 <h2 class="major">Renderings<br/>
                     Blender</h2>
-                <p>A selection of my renderings.</p>
+                <p>A selection of my renderings.
+                    <a href="https://www.instagram.com/prtstfy/" target="_blank">Instagram</a>
+                </p>
                 <ul class="actions">
                     <li><a class="button primary color1 square icon solid fa-angle-right" href="#fifth">Next</a></li>
                 </ul>
