schluss text etwas geändert

--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                     I worked for several years in forensic molecular biology at the Institute of Forensic Medicine at the University of Bern.
                     Although I love working in the laboratory, I am also drawn to design. That's why I decided to break 
                     out of my line of work and start a study of postindustrial design at Hyperwerk. My studies allow me 
-                    to pursue my individual interests. These lead me from 3D modeling and animation to virtual reality work.
+                    to pursue my individual interests. In my BA years I workd with 3D modeling, animation, VR/AR and multimedia productions.
+			I am always looking for new ways to bring my ideas to life and to find workarounds for any obstacles in my way.
                 </p>
                 
                 <ul class="actions">
