--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
             <li><a class="button primary color2 square icon solid fa-angle-right" href="#third">Next</a></li>
         </ul>
     </div>
+    <a class="image span-3" data-position="center">
+        <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="600"
+                        src="https://player.vimeo.com/video/553954605"
+                        width="576">
+                </iframe>
+    </a>
+    
     
     <div class="gallery">
         <div class="group span-3">
