--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
             <div class="gallery">
 
                 <div class="group span-1-5">
-                    <a href="VDK/Box_close1.jpg" class="image filtered tinted span-1-5" data-position="center">
+                    <a href="images\soundmachine\postits1.jpg" class="image filtered tinted span-1-5" data-position="center">
                        <img src="images\soundmachine\postits1.jpg" alt="" />
                     </a>
-                     <a href="VDK/Box_close2.jpg" class="image filtered tinted span-1-5" data-position="center">
+                     <a href="images\soundmachine\postits2.jpg" class="image filtered tinted span-1-5" data-position="center">
                        <img src="images\soundmachine\postits2.jpg" alt="" />
                     </a>
                </div>
