--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <section class="panel color4-alt" id="second">
     <div class="intro color10">
         <h2 class="major"><a href="https://player.vimeo.com/video/553954605" target="_blank">catch-22</a></h2>
-        <p>As part of my BA thesis I worked with <a href="https://www.instagram.com/thesadboyproject/" target="_blank">Fabio Bissinger</a> 
+        <p>As part of my bachelor thesis I worked with <a href="https://www.instagram.com/thesadboyproject/" target="_blank">Fabio Bissinger</a> 
             on the live performance <a href="https://player.vimeo.com/video/553954605" target="_blank">"catch-22"</a>.
             Besides the planning, I performed, produced visuals, coordinated and managed the technology myself.
             </p>
