--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             
         </div>
             <div class="gallery filtered span-2-25">
-                <model-viewer alt="Test" src="glb/MyHeadOnSculp.glb"   shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+                <model-viewer alt="Test" src="glb/PortfolioObjekt1.glb"   shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 
             </div>
 
