changed punkt und absatz

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
 		        <h2 class="major">AR Research HSLU</h2>
 		        <p> Since the beginning of 2022, I have been part of the Visual Narrativ research group at the Lucerne School of Art & Design.
                     In <a href="https://www.linkedin.com/in/tobias-matter-1a7790170/" target="_blank">Tobias Matter`s</a> projects, 
-                    we deal with the question of how augmented reality can be used and further developed in participatory urban planning processes
-				Visit our project page <a href="https://blog.hslu.ch/augmentedplanning/" target="_blank">here</a> .</p>
+                    we deal with the question of how augmented reality can be used and further developed in participatory urban planning processes.
+		<br/>
+			Visit our project page <a href="https://blog.hslu.ch/augmentedplanning/" target="_blank">here</a> .</p>
                     
 
                     <em>Blender / Unity / C# / Prototyping
